--- a/Peek/Base.lproj/Main.storyboard
+++ b/Peek/Base.lproj/Main.storyboard
@@ -554,8 +554,7 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMx-bS-Jbf">
                                             <rect key="frame" x="33" y="67" width="205" height="16"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="16" id="7rb-9A-oQX"/>
-                                                <constraint firstAttribute="width" constant="205" id="J9L-iN-L3h"/>
+                                                <constraint firstAttribute="height" constant="16" id="x3m-vk-sZc"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="11"/>
                                             <color key="textColor" red="0.57647058823529407" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -564,7 +563,7 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location icon" translatesAutoresizingMaskIntoConstraints="NO" id="j1Q-pJ-r9G">
                                             <rect key="frame" x="18" y="66" width="11" height="19"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="11" id="WDS-bq-MzB"/>
+                                                <constraint firstAttribute="width" constant="11" id="bf3-WM-MT6"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fuz-8D-oCA">
@@ -576,8 +575,8 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GP0-B9-VkC">
                                             <rect key="frame" x="337" y="420" width="20" height="17"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="17" id="Wxu-dU-asK"/>
-                                                <constraint firstAttribute="width" constant="20" id="i3o-Tj-yJ9"/>
+                                                <constraint firstAttribute="height" constant="17" id="ass-GW-fYJ"/>
+                                                <constraint firstAttribute="width" constant="20" id="h6E-6C-Sh7"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                             <nil key="textColor"/>
@@ -590,13 +589,13 @@ If you have concerns about the way Peek is handling your Information, please let
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Comment Icon" translatesAutoresizingMaskIntoConstraints="NO" id="I7x-JI-u78">
                                             <rect key="frame" x="317" y="420" width="18" height="18"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="18" id="jac-Bm-9Nz"/>
+                                                <constraint firstAttribute="width" constant="18" id="Dro-mu-Os5"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZM-wX-QdW">
                                             <rect key="frame" x="18" y="414" width="127" height="26"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="127" id="oQv-4m-BN9"/>
+                                                <constraint firstAttribute="width" constant="127" id="3nB-es-rig"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="10"/>
                                             <color key="textColor" red="0.57647058823529407" green="0.58823529411764708" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -606,38 +605,49 @@ If you have concerns about the way Peek is handling your Information, please let
                                             <rect key="frame" x="321" y="16" width="36" height="18"/>
                                             <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="0.803992523006135" colorSpace="calibratedRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="36" id="fbz-he-8nK"/>
-                                                <constraint firstAttribute="height" constant="18" id="uQa-7p-h3c"/>
+                                                <constraint firstAttribute="height" constant="18" id="Dlr-zZ-Nmc"/>
+                                                <constraint firstAttribute="width" constant="36" id="Pnl-fl-ZMH"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jbo-yp-d31">
+                                            <rect key="frame" x="317" y="64" width="39" height="22"/>
+                                            <state key="normal" image="more button"/>
+                                            <connections>
+                                                <action selector="moreButtonTapped:" destination="v4G-UX-vZT" eventType="touchUpInside" id="ZMn-Xk-U7H"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="top" secondItem="fuz-8D-oCA" secondAttribute="bottom" constant="14" id="0bv-Ef-Aq2"/>
-                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="leading" secondItem="fqG-iv-Uxx" secondAttribute="leadingMargin" constant="10" id="0uH-Q3-0Bn"/>
-                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="8" symbolic="YES" id="45d-ge-0bR"/>
-                                        <constraint firstItem="gMx-bS-Jbf" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="trailing" constant="4" id="7Q4-BV-bxf"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="gMx-bS-Jbf" secondAttribute="bottom" constant="6" id="7j0-Q2-HJv"/>
-                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="2" id="AUt-0r-lmC"/>
-                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="leading" secondItem="7gS-XZ-k3n" secondAttribute="leading" id="CzJ-8H-g49"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="j1Q-pJ-r9G" secondAttribute="bottom" constant="4" id="DtC-Gm-RRe"/>
-                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="leading" id="FPO-nm-ZqU"/>
-                                        <constraint firstItem="GP0-B9-VkC" firstAttribute="leading" secondItem="I7x-JI-u78" secondAttribute="trailing" constant="2" id="ION-pw-II3"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="4Bq-VU-GZS" secondAttribute="bottom" constant="55" id="Ld6-fE-KrD"/>
-                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="bottom" secondItem="fqG-iv-Uxx" secondAttribute="bottomMargin" id="QbD-QE-DnM"/>
-                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="centerY" secondItem="gMx-bS-Jbf" secondAttribute="centerY" id="TgX-hm-CMV"/>
-                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="top" secondItem="fqG-iv-Uxx" secondAttribute="topMargin" constant="8" id="VF0-XD-h8q"/>
-                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="GP0-B9-VkC" secondAttribute="top" id="YlZ-Eu-5dy"/>
-                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="leading" secondItem="fuz-8D-oCA" secondAttribute="trailing" constant="1" id="dKF-1c-Qva"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="trailing" secondItem="GP0-B9-VkC" secondAttribute="trailing" id="dr0-pv-0EA"/>
-                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="top" secondItem="fqG-iv-Uxx" secondAttribute="topMargin" id="ieh-1t-4pk"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="centerX" secondItem="fqG-iv-Uxx" secondAttribute="centerX" id="ktJ-V4-H8j"/>
-                                        <constraint firstItem="I7x-JI-u78" firstAttribute="centerY" secondItem="GP0-B9-VkC" secondAttribute="centerY" id="of2-1W-aH6"/>
-                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="leading" secondItem="DZM-wX-QdW" secondAttribute="leading" id="tjJ-sl-1ac"/>
-                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="trailing" secondItem="7gS-XZ-k3n" secondAttribute="trailing" id="wcu-qa-qQv"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="I7x-JI-u78" secondAttribute="bottom" constant="2" id="yko-zu-1eW"/>
+                                        <constraint firstItem="gMx-bS-Jbf" firstAttribute="centerY" secondItem="Jbo-yp-d31" secondAttribute="centerY" id="0Td-S3-fcE"/>
+                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="leading" id="2fA-8h-qg9"/>
+                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="2" id="2hc-EI-Eg5"/>
+                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="top" secondItem="fuz-8D-oCA" secondAttribute="bottom" constant="14" id="CLz-eU-uXa"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Jbo-yp-d31" secondAttribute="trailing" constant="11" id="FcQ-72-f6V"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="centerX" secondItem="fqG-iv-Uxx" secondAttribute="centerX" id="GFU-oW-rJy"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="leading" secondItem="DZM-wX-QdW" secondAttribute="leading" id="GVq-jd-lNc"/>
+                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="leading" secondItem="fuz-8D-oCA" secondAttribute="trailing" constant="1" id="Hzl-LI-GPi"/>
+                                        <constraint firstItem="Jbo-yp-d31" firstAttribute="leading" secondItem="gMx-bS-Jbf" secondAttribute="trailing" constant="79" id="Jhl-0q-YIv"/>
+                                        <constraint firstItem="Jbo-yp-d31" firstAttribute="leading" secondItem="I7x-JI-u78" secondAttribute="leading" id="Jhx-a2-g4G"/>
+                                        <constraint firstItem="gMx-bS-Jbf" firstAttribute="leading" secondItem="j1Q-pJ-r9G" secondAttribute="trailing" constant="4" id="Krt-Jv-kMG"/>
+                                        <constraint firstItem="I7x-JI-u78" firstAttribute="centerY" secondItem="GP0-B9-VkC" secondAttribute="centerY" id="Lh5-2P-W3W"/>
+                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="top" secondItem="fqG-iv-Uxx" secondAttribute="topMargin" constant="8" id="NqD-j5-RGn"/>
+                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="top" secondItem="fqG-iv-Uxx" secondAttribute="topMargin" id="OIE-kI-sUA"/>
+                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="7gS-XZ-k3n" secondAttribute="bottom" constant="8" symbolic="YES" id="Sca-EU-KKo"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="j1Q-pJ-r9G" secondAttribute="bottom" constant="4" id="U4v-fa-rSP"/>
+                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="leading" secondItem="7gS-XZ-k3n" secondAttribute="leading" id="WVb-rT-hkm"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="trailing" secondItem="GP0-B9-VkC" secondAttribute="trailing" id="XIh-6m-O3M"/>
+                                        <constraint firstItem="j1Q-pJ-r9G" firstAttribute="centerY" secondItem="gMx-bS-Jbf" secondAttribute="centerY" id="atm-Ra-Xee"/>
+                                        <constraint firstItem="I7x-JI-u78" firstAttribute="top" secondItem="GP0-B9-VkC" secondAttribute="top" id="cnw-Zh-qKX"/>
+                                        <constraint firstItem="fuz-8D-oCA" firstAttribute="leading" secondItem="fqG-iv-Uxx" secondAttribute="leadingMargin" constant="10" id="dZm-DB-6kQ"/>
+                                        <constraint firstItem="7gS-XZ-k3n" firstAttribute="top" secondItem="gMx-bS-Jbf" secondAttribute="bottom" constant="6" id="jbh-1w-R6v"/>
+                                        <constraint firstItem="GP0-B9-VkC" firstAttribute="leading" secondItem="I7x-JI-u78" secondAttribute="trailing" constant="2" id="pIv-lO-DNp"/>
+                                        <constraint firstItem="DZM-wX-QdW" firstAttribute="bottom" secondItem="fqG-iv-Uxx" secondAttribute="bottomMargin" id="rz0-sf-YKe"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="I7x-JI-u78" secondAttribute="bottom" constant="2" id="sX1-6J-OPl"/>
+                                        <constraint firstItem="Jbo-yp-d31" firstAttribute="top" secondItem="4Bq-VU-GZS" secondAttribute="bottom" constant="30" id="wBS-SG-yNg"/>
+                                        <constraint firstItem="4Bq-VU-GZS" firstAttribute="trailing" secondItem="7gS-XZ-k3n" secondAttribute="trailing" id="xg5-zx-eXk"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1133,6 +1143,7 @@ Our Service allows you to post, upload images, share information, and otherwise 
         <image name="Comment Icon" width="217" height="197"/>
         <image name="camera icon" width="99" height="99"/>
         <image name="location icon" width="34" height="58"/>
+        <image name="more button" width="30" height="8"/>
         <image name="peek icon with text" width="374" height="138"/>
         <image name="photo icon" width="99" height="99"/>
     </resources>
