--- a/Peek/Onboarding.storyboard
+++ b/Peek/Onboarding.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ikX-8i-MJE">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,11 +19,11 @@
                         <viewControllerLayoutGuide type="bottom" id="Ubx-7B-x3G"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="so2-is-6gF">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="70O-mz-WfF">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <connections>
                                     <segue destination="ocU-08-iGV" kind="embed" identifier="embedPageViewController" id="bDA-Qr-MsU"/>
                                 </connections>
@@ -37,6 +37,8 @@
                             <constraint firstAttribute="trailing" secondItem="70O-mz-WfF" secondAttribute="trailing" id="tPU-pU-S9f"/>
                         </constraints>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="414" height="736"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lQ6-eD-QS2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -59,94 +61,58 @@
                         <viewControllerLayoutGuide type="bottom" id="KtN-BE-uX0"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MzU-KS-mLu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WcQ-WG-SFG">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Pwn-QU-ySg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vGI-ic-c6m">
-                                <rect key="frame" x="62" y="177" width="241" height="313"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="h7L-Lm-NiK">
+                                <rect key="frame" x="45" y="252.33333333333337" width="325" height="231.66666666666663"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mYN-uE-9bO">
-                                        <rect key="frame" x="8" y="8" width="224" height="24"/>
+                                        <rect key="frame" x="92" y="0.0" width="141.33333333333331" height="39.999999999999972"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="24" id="cKz-MV-bdH"/>
+                                            <constraint firstAttribute="height" constant="40" id="HEH-lk-RXE"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="17"/>
+                                        <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="peek icon with text" translatesAutoresizingMaskIntoConstraints="NO" id="Fb5-mt-Rf0">
-                                        <rect key="frame" x="37" y="40" width="167" height="82"/>
+                                        <rect key="frame" x="40.666666666666686" y="44.999999999999972" width="244" height="99"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="82" id="mlc-pU-ql7"/>
+                                            <constraint firstAttribute="height" constant="99" id="iLT-Wc-Gi6"/>
+                                            <constraint firstAttribute="width" constant="244" id="vEp-XH-mbQ"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n9h-Am-VCG">
-                                        <rect key="frame" x="20" y="113" width="201" height="136"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="n9h-Am-VCG">
+                                        <rect key="frame" x="0.33333333333334281" y="148.99999999999997" width="324.66666666666663" height="20.666666666666686"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Share your photos anonymously with the world.">
                                                 <attributes>
-                                                    <font key="NSFont" size="12" name="AvenirNext-Regular"/>
-                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    <font key="NSFont" size="15" name="AvenirNext-Regular"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                         </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="👉" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eIo-jO-2w5">
-                                        <rect key="frame" x="95" y="250" width="51" height="38"/>
+                                        <rect key="frame" x="133.66666666666666" y="174.66666666666666" width="58" height="57"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="38" id="qLN-Rd-gfD"/>
+                                            <constraint firstAttribute="height" constant="57" id="iz7-0m-hJK"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="43"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="54"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="top" secondItem="vGI-ic-c6m" secondAttribute="topMargin" id="4sE-jA-u3u"/>
-                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leadingMargin" id="8Jp-nU-hII"/>
-                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="centerX" secondItem="Fb5-mt-Rf0" secondAttribute="centerX" id="DXm-hJ-fMt"/>
-                                    <constraint firstItem="eIo-jO-2w5" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="95" id="KiD-s4-K6Q"/>
-                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="centerX" secondItem="eIo-jO-2w5" secondAttribute="centerX" id="Kpf-DF-jhy"/>
-                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="top" secondItem="mYN-uE-9bO" secondAttribute="bottom" constant="8" symbolic="YES" id="Tss-xL-Vol"/>
-                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="37" id="XYl-Ls-MUz"/>
-                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="leading" secondItem="vGI-ic-c6m" secondAttribute="leading" constant="20" id="ZXl-qh-DB5"/>
-                                    <constraint firstAttribute="bottom" secondItem="eIo-jO-2w5" secondAttribute="bottom" constant="25" id="aWf-2R-sdw"/>
-                                    <constraint firstItem="mYN-uE-9bO" firstAttribute="centerX" secondItem="vGI-ic-c6m" secondAttribute="centerX" id="b6B-OM-7qv"/>
-                                    <constraint firstAttribute="width" constant="241" id="fvP-id-BjR"/>
-                                    <constraint firstItem="Fb5-mt-Rf0" firstAttribute="centerX" secondItem="n9h-Am-VCG" secondAttribute="centerX" id="gyQ-EV-Rnb"/>
-                                    <constraint firstAttribute="trailing" secondItem="n9h-Am-VCG" secondAttribute="trailing" constant="20" id="kjz-nN-4ad"/>
-                                    <constraint firstAttribute="trailing" secondItem="Fb5-mt-Rf0" secondAttribute="trailing" constant="37" id="moy-ie-wbN"/>
-                                    <constraint firstItem="n9h-Am-VCG" firstAttribute="top" secondItem="mYN-uE-9bO" secondAttribute="bottom" constant="81" id="riV-jn-K2h"/>
-                                    <constraint firstAttribute="bottom" secondItem="n9h-Am-VCG" secondAttribute="bottom" constant="64" id="ve1-QJ-Ka0"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <integer key="value" value="15"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </view>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.65005302499999995" green="0.79883803929999997" blue="0.68495621120000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="vGI-ic-c6m" firstAttribute="leading" secondItem="MzU-KS-mLu" secondAttribute="leadingMargin" constant="46" id="HTh-oa-IxQ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="vGI-ic-c6m" secondAttribute="trailing" constant="56" id="JjZ-U7-Edl"/>
-                            <constraint firstAttribute="trailing" secondItem="WcQ-WG-SFG" secondAttribute="trailing" id="KP8-zm-B20"/>
-                            <constraint firstItem="WcQ-WG-SFG" firstAttribute="leading" secondItem="MzU-KS-mLu" secondAttribute="leading" id="eAh-vE-Alw"/>
-                            <constraint firstItem="WcQ-WG-SFG" firstAttribute="bottom" secondItem="KtN-BE-uX0" secondAttribute="top" id="fsR-Bd-W5c"/>
-                            <constraint firstItem="KtN-BE-uX0" firstAttribute="top" secondItem="vGI-ic-c6m" secondAttribute="bottom" constant="177" id="imd-dC-UyM"/>
-                            <constraint firstItem="WcQ-WG-SFG" firstAttribute="centerY" secondItem="vGI-ic-c6m" secondAttribute="centerY" id="t3u-Pm-KJ7"/>
-                            <constraint firstItem="vGI-ic-c6m" firstAttribute="centerY" secondItem="MzU-KS-mLu" secondAttribute="centerY" id="xOr-Tw-itM"/>
-                            <constraint firstItem="vGI-ic-c6m" firstAttribute="top" secondItem="9Sq-HP-uQt" secondAttribute="bottom" constant="157" id="z99-tG-oHK"/>
+                            <constraint firstItem="h7L-Lm-NiK" firstAttribute="centerY" secondItem="MzU-KS-mLu" secondAttribute="centerY" id="Qhb-u6-Hny"/>
+                            <constraint firstItem="h7L-Lm-NiK" firstAttribute="leading" secondItem="MzU-KS-mLu" secondAttribute="leadingMargin" constant="25" id="VUa-6r-BhR"/>
+                            <constraint firstItem="h7L-Lm-NiK" firstAttribute="centerX" secondItem="MzU-KS-mLu" secondAttribute="centerX" id="d4E-20-9gK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="h7L-Lm-NiK" secondAttribute="trailing" constant="24" id="lKw-AG-NVd"/>
                         </constraints>
                     </view>
                     <connections>
@@ -158,7 +124,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u66-9q-CUO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="629.60000000000002" y="845.1274362818591"/>
+            <point key="canvasLocation" x="628.98550724637687" y="844.56521739130437"/>
         </scene>
     </scenes>
     <resources>
